[package]
name = "uniswapv3_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
ethers = { version = "2.0.10", features = [
    "abigen",
    "rustls",
    "ws",
    "ethers-solc",
] }
ethers-core = "2.0.9"
chrono = "0.4.26"
anyhow = "1.0.82"
thiserror = "1.0.65"
